# ppu-libs

./: .gitmodules  CMakeLists.txt  README.md  make_header_from_ll_defines.sh  run_cuda2ppu.sh
cuda2gcn/src/: generic.cl  half.cl  precision.cl
cuda2ppu/: CMakeLists.txt
cuda2ppu/src/: bitsbytes.cl  convert.cl  math.cl  opencuda2ppu.ll  rounding.cl
cuda2ppu/src/attic/: opencuda2ppu.cl
hip/: CMakeLists.txt
hip/src/: dummy.amdgcn.bc
irif/: CMakeLists.txt
libclc/: CMakeLists.txt  ppu_configure.py  run_build.sh
ockl/src/: activelane.cl
oclc/src/: isa_version_600.cl
